pre-json-implementation